jws: feat: pvp페이지 main 캐릭터 속도 조절

--- a/FE/front/src/App.css
+++ b/FE/front/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+
+@font-face {
+  font-family: 'galmuri9';
+  src: url(./asset/font/Galmuri9.ttf);
+  font-weight: normal;
+  font-style: normal;
+}
