--- a/FE/front/src/pages/SubwayMapPage.css
+++ b/FE/front/src/pages/SubwayMapPage.css
@@ -1,1 +1,354 @@
+/* map {
+    display: block;
+    position: relative;
+  } */
+area {
+  display: block;
+  position: absolute;
+  border: 1px solid black;
+}
 
+area:nth-of-type(1) {
+  top: 31.5%;
+  left: 5.4%;
+  width: 5%;
+  height: 5%;
+}
+
+area:nth-of-type(2) {
+  top: 31.5%;
+  left: 12.5%;
+  width: 5%;
+  height: 5%;
+}
+
+area:nth-of-type(3) {
+  top: 31.5%;
+  left: 20%;
+  width: 5%;
+  height: 5%;
+}
+
+area:nth-of-type(4) {
+  top: 31.5%;
+  left: 27.3%;
+  width: 5%;
+  height: 5%;
+}
+area:nth-of-type(5) {
+  top: 31.5%;
+  left: 34.5%;
+  width: 5%;
+  height: 5%;
+}
+
+area:nth-of-type(6) {
+  top: 31.5%;
+  left: 41.7%;
+  width: 5%;
+  height: 5%;
+}
+
+area:nth-of-type(7) {
+  top: 31.5%;
+  left: 49.1%;
+  width: 5%;
+  height: 5%;
+}
+
+area:nth-of-type(8) {
+  top: 31.5%;
+  left: 56.4%;
+  width: 5%;
+  height: 5%;
+}
+area:nth-of-type(9) {
+  top: 31.5%;
+  left: 63.7%;
+  width: 5%;
+  height: 5%;
+}
+
+area:nth-of-type(10) {
+  top: 31.5%;
+  left: 71%;
+  width: 5%;
+  height: 5%;
+}
+
+area:nth-of-type(11) {
+  top: 31.5%;
+  left: 78.3%;
+  width: 5%;
+  height: 5%;
+}
+
+area:nth-of-type(12) {
+  top: 31.5%;
+  left: 85.8%;
+  width: 5%;
+  height: 5%;
+}
+area:nth-of-type(13) {
+  top: 36.9%;
+  left: 85.8%;
+  width: 5%;
+  height: 5%;
+}
+
+area:nth-of-type(14) {
+  top: 42%;
+  left: 85.8%;
+  width: 5%;
+  height: 5%;
+}
+
+area:nth-of-type(15) {
+  top: 47.4%;
+  left: 85.8%;
+  width: 5%;
+  height: 5%;
+}
+
+area:nth-of-type(16) {
+  top: 52.5%;
+  left: 85.8%;
+  width: 5%;
+  height: 5%;
+}
+area:nth-of-type(17) {
+  top: 57.9%;
+  left: 85.8%;
+  width: 5%;
+  height: 5%;
+}
+
+area:nth-of-type(18) {
+  top: 63.2%;
+  left: 85.8%;
+  width: 5%;
+  height: 5%;
+}
+
+area:nth-of-type(19) {
+  top: 68.5%;
+  left: 85.8%;
+  width: 5%;
+  height: 5%;
+}
+
+area:nth-of-type(20) {
+  top: 73.8%;
+  left: 85.8%;
+  width: 5%;
+  height: 5%;
+}
+area:nth-of-type(21) {
+  top: 79.1%;
+  left: 85.8%;
+  width: 5%;
+  height: 5%;
+}
+
+area:nth-of-type(22) {
+  top: 83%;
+  left: 80.2%;
+  width: 5%;
+  height: 5%;
+}
+
+area:nth-of-type(23) {
+  top: 83%;
+  left: 74.5%;
+  width: 5%;
+  height: 5%;
+}
+
+area:nth-of-type(24) {
+  top: 83%;
+  left: 68.2%;
+  width: 5%;
+  height: 5%;
+}
+
+area:nth-of-type(25) {
+  top: 83%;
+  left: 62.1%;
+  width: 5%;
+  height: 5%;
+}
+area:nth-of-type(26) {
+  top: 83%;
+  left: 56.1%;
+  width: 5%;
+  height: 5%;
+}
+
+area:nth-of-type(27) {
+  top: 83%;
+  left: 50.3%;
+  width: 5%;
+  height: 5%;
+}
+
+area:nth-of-type(28) {
+  top: 83%;
+  left: 44.2%;
+  width: 5%;
+  height: 5%;
+}
+
+area:nth-of-type(29) {
+  top: 83%;
+  left: 38.2%;
+  width: 5%;
+  height: 5%;
+}
+area:nth-of-type(30) {
+  top: 83%;
+  left: 32.2%;
+  width: 5%;
+  height: 5%;
+}
+
+area:nth-of-type(31) {
+  top: 83%;
+  left: 26.3%;
+  width: 5%;
+  height: 5%;
+}
+
+area:nth-of-type(32) {
+  top: 83%;
+  left: 20.4%;
+  width: 5%;
+  height: 5%;
+}
+
+area:nth-of-type(33) {
+  top: 83%;
+  left: 14.3%;
+  width: 5%;
+  height: 5%;
+}
+area:nth-of-type(34) {
+  top: 83%;
+  left: 8.4%;
+  width: 5%;
+  height: 5%;
+}
+
+area:nth-of-type(35) {
+  top: 83%;
+  left: 0%;
+  width: 5%;
+  height: 5%;
+}
+
+area:nth-of-type(36) {
+  top: 75.7%;
+  left: 0%;
+  width: 5%;
+  height: 5%;
+}
+
+area:nth-of-type(37) {
+  top: 70.4%;
+  left: 0%;
+  width: 5%;
+  height: 5%;
+}
+
+area:nth-of-type(38) {
+  top: 65%;
+  left: 0%;
+  width: 5%;
+  height: 5%;
+}
+area:nth-of-type(39) {
+  top: 60%;
+  left: 0%;
+  width: 5%;
+  height: 5%;
+}
+
+area:nth-of-type(40) {
+  top: 54.7%;
+  left: 0%;
+  width: 5%;
+  height: 5%;
+}
+
+area:nth-of-type(41) {
+  top: 49.4%;
+  left: 0%;
+  width: 5%;
+  height: 5%;
+}
+
+area:nth-of-type(42) {
+  top: 44%;
+  left: 0%;
+  width: 5%;
+  height: 5%;
+}
+area:nth-of-type(43) {
+  top: 39%;
+  left: 0%;
+  width: 5%;
+  height: 5%;
+}
+
+area:nth-of-type(44) {
+  top: 12.1%;
+  left: 68.2%;
+  width: 5%;
+  height: 5%;
+}
+
+area:nth-of-type(45) {
+  top: 12.1%;
+  left: 74.5%;
+  width: 5%;
+  height: 5%;
+}
+
+area:nth-of-type(46) {
+  top: 12.1%;
+  left: 80.6%;
+  width: 5%;
+  height: 5%;
+}
+area:nth-of-type(47) {
+  top: 24%;
+  left: 86%;
+  width: 5%;
+  height: 5%;
+}
+
+area:nth-of-type(48) {
+  top: 90%;
+  left: 0%;
+  width: 5%;
+  height: 5%;
+}
+
+area:nth-of-type(49) {
+  top: 94%;
+  left: 5%;
+  width: 5%;
+  height: 5%;
+}
+
+area:nth-of-type(50) {
+  top: 94%;
+  left: 11.4%;
+  width: 5%;
+  height: 5%;
+}
+area:nth-of-type(51) {
+  top: 94%;
+  left: 18.1%;
+  width: 5%;
+  height: 5%;
+}
