--- a/FE/front/src/components/battle/battleDialog.css
+++ b/FE/front/src/components/battle/battleDialog.css
@@ -1,8 +1,10 @@
 .battleDialog {
   /* border: 2px solid blue; */
-  top: 65vh;
-  position: absolute;
-  height: 35vh;
+  top: 100%;
+  /* position: absolute; */
+  position: relative;
+  display: flex;
+  height: 35%;
   width: 100%;
 }
 
@@ -12,4 +14,12 @@
   /* position: absolute; */
   width: 100%;
   height: 100%;
+}
+.battleDialog-talk {
+  /* border: 1px black solid; */
+  position: absolute;
+  left: 8%;
+  top: 10%;
+  font-family: galmuri9;
+  font-size: large;
 }
