--- a/FE/front/src/components/battle/battleDialogTalk.css
+++ b/FE/front/src/components/battle/battleDialogTalk.css
@@ -1,17 +1,14 @@
-/* @import url('https://cdn.jsdelivr.net/npm/galmuri@latest/dist/galmuri.css'); */
-
-.battleDialogTalk{
-    /* border: 1px black solid; */
-    position: absolute;
-    left: 2rem;
-    top: 2rem;
-    font-family: galmuri9;
-    font-size: large;
-   
+.battleDialogTalk {
+  /* border: 1px black solid; */
+  position: absolute;
+  left: 8%;
+  top: 10%;
+  font-family: galmuri9;
+  font-size: large;
 }
 @font-face {
-    font-family: 'galmuri9';
-    src: url(/src/asset/font/Galmuri9.ttf);
-    font-weight: normal;
-    font-style: normal;
-  }
+  font-family: "galmuri9";
+  src: url(/src/asset/font/Galmuri9.ttf);
+  font-weight: normal;
+  font-style: normal;
+}
