feat: 결투 소리 재생 , 결과페이지 Route

--- a/FE/front/src/components/battle/battleDialog.css
+++ b/FE/front/src/components/battle/battleDialog.css
@@ -23,3 +23,10 @@
   font-family: galmuri9;
   font-size: large;
 }
+
+.battleAudio {
+  border: 1px black solid;
+  position: absolute;
+  left: 8%;
+  top: 80%;
+}
