Feat: 노선도 위치 고정 및 디테일 기능 추가

--- a/FE/front/src/App.css
+++ b/FE/front/src/App.css
@@ -7,7 +7,7 @@
 }
 
 @font-face {
-  font-family: 'galmuri9';
+  font-family: "galmuri9";
   src: url(./asset/font/Galmuri9.ttf);
   font-weight: normal;
   font-style: normal;
