--- a/FE/front/src/pages/MainPage.css
+++ b/FE/front/src/pages/MainPage.css
@@ -31,7 +31,7 @@
   top: 53%;
 }
 
-.router-map-btn{
+.main-router-map-btn {
   box-sizing: border-box;
   position: absolute;
   height: 12%;
@@ -40,7 +40,7 @@
   left: 39%;
 }
 
-.router-map-btn > img {
+.main-router-map-btn > img {
   box-sizing: border-box;
   height: 100%;
   width: 100%;
