--- a/FE/front/src/pages/ResultPage.css
+++ b/FE/front/src/pages/ResultPage.css
@@ -1,99 +1,107 @@
-.PvpPageBg {
-    /* border: 1px black solid; */
-    height: 100%;
-    width: 100%;
-    overflow: hidden;
-    /* overflow: visible; */
-  }
-  
-  .battleCharacter1 {
-    /* border: 1px solid red; */
-    position: relative;
-    width: 100%;
-    height: 30%;
-    display: flex;
-    animation: battleChar1 1s linear alternate;
-  }
-  
-  .battleCharacter1 > p {
-    margin-top: 33%;
-    margin-left: 9%;
-    position: absolute;
-    /* border: 1px solid blue; */
-  }
-  .battleCharacter1 > img {
-    /* margin-top: 20%; */
-    /* height: 30%; */
-    /* border: 1px solid blue; */
-    height: 20%;
-    width: 70%;
-    margin-left: 2%;
-    margin-top: 30%;
-    margin-right: -7%;
-  }
-  
-  .battleCharacter2 {
-    /* border: 1px solid red; */
-    position: relative;
-    width: 100%;
-    height: 30%;
-    display: flex;
-    transform: scaleX(-1);
-    animation: battleChar2 1s linear alternate;
-  }
-  
-  .battleCharacter2 > p {
-    margin-top: 23%;
-    margin-left: 9%;
-    position: absolute;
-    transform: scaleX(-1);
-    /* border: 1px solid blue; */
-  }
-  .battleCharacter2 > img {
-    /* margin-top: 20%; */
-    /* height: 30%; */
-    /* border: 1px solid blue; */
-    height: 20%;
-    width: 70%;
-    margin-left: 2%;
-    margin-top: 20%;
-    margin-right: -6%;
-  }
-  
-  .pvpPageLoading {
-    position: absolute;
-    left: 0%;
-    width: 100%;
-    height: 100%;
-    z-index: 1001;
-  }
-  
-  p {
-    font-family: galmuri9;
-  }
-  
-  @font-face {
-    font-family: "galmuri9";
-    src: url(/src/asset/font/Galmuri9.ttf);
-    font-weight: normal;
-    font-style: normal;
-  }
-  
-  @keyframes battleChar1 {
-    from {
-      transform: translateX(-100%);
-    }
-    to {
-      transform: translateX(0%);
-    }
-  }
-  
-  @keyframes battleChar2 {
-    from {
-      transform: translateX(100%) scaleX(-1);
-    }
-    to {
-      transform: translateX(0%) scaleX(-1);
-    }
-  }
-  
+.Pvp-Result {
+  /* border: 1px black solid; */
+  height: 99%;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.battle-result-1 {
+  /* border: 1px solid red; */
+  position: relative;
+  width: 49%;
+  height: 70%;
+  display: flex;
+  flex-direction: column;
+}
+
+.battle-result-p1 {
+  margin-top: 40%;
+  width: 100%;
+  position: relative;
+  /* border: 1px solid blue; */
+}
+.battle-result-p2 {
+  margin-top: 25%;
+  width: 100%;
+  position: relative;
+  font-size: 200%;
+  color: red;
+  /* border: 1px solid blue; */
+}
+.battle-result-p3 {
+  margin-top: 20%;
+  width: 100%;
+  position: relative;
+  /* border: 1px solid blue; */
+}
+.battle-result-char {
+  width: 100%;
+  height: 35%;
+  /* border: 1px solid blue; */
+  margin-top: -20%;
+  position: relative;
+}
+
+.battle-result-2 {
+  /* border: 1px solid red; */
+  position: relative;
+  width: 49%;
+  height: 70%;
+  display: flex;
+  flex-direction: column;
+}
+
+.battle-result2-p1 {
+  margin-top: 40%;
+  width: 100%;
+  position: relative;
+  /* border: 1px solid blue; */
+}
+.battle-result2-p2 {
+  margin-top: 25%;
+  width: 100%;
+  position: relative;
+  font-size: 200%;
+  color: blue;
+  /* border: 1px solid blue; */
+}
+.battle-result2-p3 {
+  margin-top: 20%;
+  width: 100%;
+  position: relative;
+  /* border: 1px solid blue; */
+}
+.battle-result2-char {
+  width: 100%;
+  height: 35%;
+  /* border: 1px solid blue; */
+  margin-top: -20%;
+  position: relative;
+}
+
+.battleResult-talk {
+  position: relative;
+  width: 100%;
+  height: 30%;
+}
+.battleResult-talk > img {
+  width: 100%;
+  height: 100%;
+}
+.battleResult-talk-p {
+  position: absolute;
+  top: 10%;
+  left: 8%;
+}
+
+p {
+  font-family: galmuri9;
+}
+
+@font-face {
+  font-family: "galmuri9";
+  src: url(/src/asset/font/Galmuri9.ttf);
+  font-weight: normal;
+  font-style: normal;
+}
