--- a/FE/front/src/components/mainpage/SubwayBoard.css
+++ b/FE/front/src/components/mainpage/SubwayBoard.css
@@ -162,3 +162,43 @@
     transform: translateY(0);
   }
 }
+
+
+.flash {
+  animation: flash 1s infinite;
+}
+
+@keyframes flash {
+  0% {
+    color: #fff;
+    opacity: 0.5;
+  }
+  50% {
+    color: rgb(217, 255, 49);
+    opacity: 1;
+  }
+  100% {
+    color: #fff;
+    opacity: 0.5;
+  }
+}
+
+
+
+.board-modal-wrap {
+  display:none;
+  position:absolute;
+  top:50%;
+  left:50%;
+  transform:translate(-50%,-50%);
+  width:500px;
+  padding: 50px;
+  height:400px;
+  z-index:1500;
+  color: #eeeb31;
+  font-size: 4rem;
+  font-weight: 1000;
+  font-family: "galmuri9";
+  -webkit-text-stroke: 0.5px rgb(0, 0, 0);
+}
+
