Feat: 수동채굴 아이템(서류) + 수동채굴 버튼, 전광판 연동 완료

--- a/FE/front/src/components/mainpage/GetCoinItem.css
+++ b/FE/front/src/components/mainpage/GetCoinItem.css
@@ -17,12 +17,12 @@
 }
 
 .get-coin-effect {
-    display: block;
-    box-sizing: content-box;
-    font-family: 'Galmuri9';
-    font-weight: 800;
-    animation: getCoinEffectAppear 1s linear;
-    z-index: 1001;
+  display: block;
+  box-sizing: content-box;
+  font-family: "Galmuri9";
+  font-weight: 800;
+  animation: getCoinEffectAppear 1s linear;
+  z-index: 1001;
 }
 
 @keyframes getCoinEffectAppear {
