--- a/FE/front/src/pages/DetailSubwayPage.css
+++ b/FE/front/src/pages/DetailSubwayPage.css
@@ -1,3 +1,61 @@
+.detail-background {
+  position: relative;
+  height: 100%;
+  background-color: rgb(255, 255, 255);
+}
+.detail-holder {
+  width: 100%;
+  height: 10vh;
+  position: sticky !important;
+  top: 0;
+  font-size: 10em;
+  z-index: 1;
+}
+.detail-title {
+  background: #f3d9d9;
+  display: flex;
+  justify-content: center;
+  padding: 3vw;
+}
+.detail-subtitle {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 2vw;
+  padding-bottom: 2vw;
+  padding-left: 6vw;
+  padding-right: 6vw;
+  border-top: solid black 1px;
+  border-bottom: solid black 1px;
+}
+.detail-content-box {
+  padding-bottom: 5vw;
+}
+.detail-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 3vw;
+  padding-left: 6vw;
+  padding-right: 6vw;
+}
+.detail-subject {
+  font-size: large;
+  margin: 0%;
+  float: right;
+  clear: both;
+}
+.detail-subject-2 {
+  font-size: small;
+  margin: 0%;
+  float: right;
+  clear: both;
+}
+.detail-invest {
+  position: absolute;
+  bottom: 20%;
+  left: 40%;
+}
 .detail-router-map-btn {
   box-sizing: border-box;
   position: absolute;
