--- a/FE/front/src/pages/HotSubwayPage.css
+++ b/FE/front/src/pages/HotSubwayPage.css
@@ -1,3 +1,53 @@
+.hot-background {
+  position: relative;
+  height: 100%;
+  background-color: rgb(255, 255, 255);
+}
+.hot-holder {
+  width: 100%;
+  height: 10vh;
+  position: sticky !important;
+  top: 0;
+  font-size: 10em;
+  z-index: 1;
+}
+.hot-title {
+  background: #f3d9d9;
+  display: flex;
+  justify-content: center;
+  padding: 3vw;
+}
+.hot-subtitle {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 2vw;
+  padding-bottom: 2vw;
+  padding-left: 6vw;
+  padding-right: 6vw;
+  border-top: solid black 1px;
+  border-bottom: solid black 1px;
+}
+.hot-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 3vw;
+  padding-left: 6vw;
+  padding-right: 6vw;
+}
+.hot-subject {
+  font-size: large;
+  margin: 0%;
+  float: right;
+  clear: both;
+}
+.hot-subject-2 {
+  font-size: small;
+  margin: 0%;
+  float: right;
+  clear: both;
+}
 .hot-router-map-btn {
   box-sizing: border-box;
   position: absolute;
@@ -6,7 +56,6 @@
   bottom: 4%;
   left: 39%;
 }
-
 .hot-router-map-btn > img {
   box-sizing: border-box;
   height: 100%;
