--- a/FE/front/src/pages/MySubwayPage.css
+++ b/FE/front/src/pages/MySubwayPage.css
@@ -1,24 +1,49 @@
 .my-background {
   position: relative;
   height: 100%;
-  background-color: rgb(194, 248, 193);
+  background-color: rgb(255, 255, 255);
 }
 .my-holder {
-  background: #fef4eb;
   width: 100%;
-  height: 41vh;
+  height: 10vh;
   position: sticky !important;
   top: 0;
   font-size: 10em;
   z-index: 1;
 }
 .my-title {
+  background: #f3d9d9;
+  display: flex;
+  justify-content:center;
+  padding: 3vw;
+}
+.my-subtitle {
   display: flex;
   justify-content: space-between;
-  padding: 10vw;
+  align-items: center;
+  padding-top: 2vw;
+  padding-bottom: 2vw;
+  padding-left: 6vw;
+  padding-right: 6vw;
+  border-top: solid black 1px;
+  border-bottom: solid black 1px;
+}
+.my-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 3vw;
+  padding-left: 6vw;
+  padding-right: 6vw;
 }
 .my-subject {
   font-size: large;
+  margin: 0%;
+}
+.my-subject-2 {
+  font-size: small;
+  margin: 0%;
+  float: right;
 }
 .my-router-map-btn {
   box-sizing: border-box;
