--- a/FE/front/src/components/mainpage/Modal.css
+++ b/FE/front/src/components/mainpage/Modal.css
@@ -38,17 +38,32 @@
 }
 
 @keyframes modalAppear {
-    from{
-        transform:translate(-50%, 100%);
-    }
-    to{
-        transform:translate(-50%, -50%);
-    }
+  from {
+    transform: translate(-50%, 100%);
+  }
+  to {
+    transform: translate(-50%, -50%);
+  }
 }
 
-.modal-component{
-    font-size: 2rem;
-    width: 90%;
-    height: 95%;
-    margin: 5%;
+.modal-component {
+  font-size: 2rem;
+  width: 80%;
+  height: 95%;
+  margin: 5%;
+}
+
+.menu-select-list {
+    display: flex;
+    flex-direction: column;
+    padding-top: 10%;
+    padding-left: 12%;
+  width: 100%;
+  height: 100%;
+}
+
+.menu-select {
+  width: 52%;
+  height: 30%;
+  z-index: 1500;
 }
