--- a/FE/front/src/pages/MainPage.css
+++ b/FE/front/src/pages/MainPage.css
@@ -147,3 +147,43 @@
   background-color: black;
   z-index: 1004;
 }
+
+.menu-toggle-bg{
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1200;
+}
+
+.menu-toggle-wrap{
+  display: block;
+  position: absolute;
+  width: 30%;
+  height: 30%;
+  top: 29%;
+  left: 52%;
+  z-index: 1500;
+  animation: appearOpacity 0.5s ease-in 0s 1 forwards;
+}
+
+.menu-toggle-img{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+}
+
+@keyframes appearOpacity {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
