Feat: 닉네임 변경 모달 구현, 전광판 렌더링 연동 확인

--- a/FE/front/src/components/mainpage/Modal.css
+++ b/FE/front/src/components/mainpage/Modal.css
@@ -48,9 +48,10 @@
 
 .modal-component {
   font-size: 2rem;
-  width: 80%;
+  width: 90%;
   height: 95%;
-  margin: 5%;
+  padding: 5%;
+  text-align: center;
 }
 
 .menu-select-list {
