--- a/FE/front/src/pages/MainPage.css
+++ b/FE/front/src/pages/MainPage.css
@@ -139,7 +139,7 @@
 }
 
 .black-background {
-  position: fixed;
+  position: absolute;
   top: 0%;
   left: 0%;
   height: 100%;
@@ -148,7 +148,7 @@
   z-index: 1004;
 }
 
-.menu-toggle-bg{
+.menu-toggle-bg {
   display: block;
   width: 100%;
   height: 100%;
@@ -159,7 +159,7 @@
   z-index: 1200;
 }
 
-.menu-toggle-wrap{
+.menu-toggle-wrap {
   display: block;
   position: absolute;
   width: 30%;
@@ -170,7 +170,7 @@
   animation: appearOpacity 0.5s ease-in 0s 1 forwards;
 }
 
-.menu-toggle-img{
+.menu-toggle-img {
   position: absolute;
   top: 50%;
   left: 50%;
