Feat: pvp 페이지 이동 flow, router 설정. gameReadypage

--- a/FE/front/src/pages/ReceiptPage.css
+++ b/FE/front/src/pages/ReceiptPage.css
@@ -7,7 +7,7 @@
   /* border: 1px black solid; */
 }
 .receipt {
-  margin-top: 10%;
+  margin-top: 20%;
   height: 80%;
   width: 100%;
   /* border: 1px black solid; */
@@ -29,7 +29,7 @@
   /* border: 1px blue solid; */
   font-size: 200%;
   width: 100%;
-  margin-bottom: 6%;
+  margin-bottom: 4%;
 }
 .receipt-text-main {
   /* border: 1px blue solid; */
@@ -39,7 +39,7 @@
 .receipt-text-main-left {
   /* border: 1px red solid; */
   margin-top: 1%;
-  margin-bottom: 2%;
+  margin-bottom: 1%;
   width: 20%;
   font-size: 110%;
   /* justify-content: space-around; */
@@ -48,9 +48,9 @@
 .receipt-text-main-right {
   /* border: 1px red solid; */
   margin-top: 1%;
-  margin-bottom: 2%;
+  margin-bottom: 1%;
   width: 39%;
-  font-size: 110%;
+  font-size: 100%;
   /* justify-content: space-around; */
   margin-left: 0%;
   text-align: right;
@@ -83,8 +83,11 @@
   text-align: right;
   line-height: 200%;
 }
-
-p {
+.receipt-button-home {
+  /* border: 1px solid black; */
+  margin-top: 20%;
+}
+.p {
   font-family: galmuri9;
 }
 
