Feat: 유저 코인 내역서 UI(더 보기 버튼 미완)

--- a/FE/front/src/components/mainpage/MenuBar.css
+++ b/FE/front/src/components/mainpage/MenuBar.css
@@ -1,4 +1,6 @@
 .menu-bar-container {
+  z-index: 1003;
+  display: absolute;
 }
 
 .menu-bar-bg {
@@ -9,7 +11,7 @@
   top: 0;
   left: 0;
   right: 0;
-  z-index: 1002;
+  z-index: 1003;
 }
 
 .menu-bar {
