--- a/FE/front/src/components/mainpage/CoinHistory.css
+++ b/FE/front/src/components/mainpage/CoinHistory.css
@@ -19,12 +19,23 @@
 .coin-history-body::-webkit-scrollbar {
   display: none;
 }
-.coin-history-add{
-    padding: 5%;
-    margin: 5% 0%;
-    width: 86%;
-    height: 6%;
-    border-radius: 30px;
-    background-color: rgb(163, 220, 255);
-    border: solid black 4px;
+.coin-history-page-move {
+  padding: 5% 0%;
+  margin: 5% 0%;
+  margin-right: 0px;
+  width: 100%;
+  height: 6%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.coin-history-page-left,
+.coin-history-page-right {
+  padding: 5%;
+  width: 100%;
+  height: 100%;
+  border-radius: 30px;
+  background-color: rgb(163, 220, 255);
+  border: solid black 4px;
 }
