--- a/FE/front/src/pages/LoginPage.css
+++ b/FE/front/src/pages/LoginPage.css
@@ -1,16 +1,25 @@
 .login-background {
   height: 100%;
-  background-image: url("../asset/image/login_background.png");
-  background-size: 150% 100%;
-  animation: movement 9s linear infinite;
+  background-image: url("../asset/image/screenDoor.png");
+  background-size: 100% 100%;
+  /* animation: movement 9s linear infinite; */
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  /* justify-content: space-around; */
   align-items: center;
 }
 .login-title-img {
   width: 100%;
   height: 30%;
+  /* border: 1px solid black; */
+  margin-top: 20%;
+}
+.login-title-text {
+  font-family: galmuri9;
+  font-size: 120%;
+  margin-bottom: 45%;
+  color: rgb(23, 229, 23);
+  -webkit-text-stroke: 0.3px rgb(11, 12, 11);
 }
 .login-kakao-img {
   width: 70%;
