--- a/FE/front/src/pages/MiniGamePage.css
+++ b/FE/front/src/pages/MiniGamePage.css
@@ -1,6 +1,6 @@
 .minigame {
   /* border: 1px black solid; */
-  /* width: 100%; */
+  width: 100%;
   height: 80%;
 }
 
@@ -8,10 +8,30 @@
   font-family: galmuri9;
   margin-top: 20%;
 }
-.minigame-score {
-  font-size: 130%;
+.minigame-cal-timer {
+  font-family: galmuri9;
+  font-size: 200%;
 }
-
+.minigame-score-board {
+  font-size: 100%;
+  width: 100%;
+  height: 25%;
+}
+.minigame-cal-currentmoney {
+  font-size: 130%;
+  border-bottom: 1px black solid;
+  font-family: galmuri9;
+  width: 80%;
+  margin-left: 10%;
+}
+.minigame-cal-money-value {
+  font-size: 130%;
+  /* border: 1px black solid; */
+  top: 10%;
+  font-family: galmuri9;
+  /* width: 80%; */
+  /* margin-left: 10%; */
+}
 .minigame-select {
   margin-top: 3%;
   /* border: 1px black solid; */
