--- a/FE/front/src/pages/ResultPage.css
+++ b/FE/front/src/pages/ResultPage.css
@@ -37,9 +37,8 @@
 }
 .battle-result-char {
   width: 100%;
-  height: 35%;
+  height: 30%;
   /* border: 1px solid blue; */
-  margin-top: -20%;
   position: relative;
 }
 
@@ -59,7 +58,7 @@
   /* border: 1px solid blue; */
 }
 .battle-result2-p2 {
-  margin-top: 25%;
+  top: 2%;
   width: 100%;
   position: relative;
   font-size: 200%;
@@ -67,16 +66,16 @@
   /* border: 1px solid blue; */
 }
 .battle-result2-p3 {
-  margin-top: 20%;
+  /* margin-top: 20%; */
+  top: 6%;
   width: 100%;
   position: relative;
   /* border: 1px solid blue; */
 }
 .battle-result2-char {
   width: 100%;
-  height: 35%;
+  height: 30%;
   /* border: 1px solid blue; */
-  margin-top: -20%;
   position: relative;
 }
 
