Feat: 메인페이지 UI 개선 중간커밋

--- a/FE/front/src/components/mainpage/SubwayBoard.css
+++ b/FE/front/src/components/mainpage/SubwayBoard.css
@@ -61,68 +61,46 @@
   z-index: 1002;
   overflow: hidden;
 }
-
-/* .subway-board-grid {
+.subway-board-grid {
   box-sizing: border-box;
   width: 94%;
   height: 88%;
   position: absolute;
-  top:6%;
-  left:3%;
-  border:5px solid black;
+  top: 6%;
+  left: 3%;
+  border: 5px solid black;
   border-radius: 30px;
   background-size: 5px 5px;
-  background-image:
-    linear-gradient(to right, black 0.5px, transparent 0px),
-    linear-gradient(to bottom, black 0.5px, transparent 0px);
+  background-image: linear-gradient(to right, black 1px, transparent 0px),
+    linear-gradient(to bottom, black 1px, transparent 0px);
   opacity: 1;
   z-index: 1003;
-} */
-
+}
 .board-part {
   box-sizing: border-box;
   font-family: "galmuri9";
   color: #86f55f;
   height: 33%;
 }
-/* .first-part {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  font-size: 125%;
-}
-.second-part {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 125%;
-} */
 .board-first-part {
   color: #86f55f;
   box-sizing: border-box;
-  height: 50%;
+  height: 65%;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
   align-items: center;
-  font-size: 150%;
+  font-size: 200%;
   font-family: "galmuri9";
 }
 .board-second-part {
   color: #86f55f;
   box-sizing: border-box;
-  height: 50%;
-  font-size:150%;
+  height: 35%;
+  font-size: 140%;
   font-family: "galmuri9";
   animation: slide 10s linear infinite;
   animation-play-state: running;
   white-space: nowrap;
-}
-.third-part {
-  box-sizing: border-box;
-  animation: slide 10s linear infinite;
-  animation-play-state: running;
-  white-space: nowrap;
-  font-size: 125%;
 }
 
 @keyframes slide {
@@ -141,21 +119,19 @@
   color: #fec189;
 }
 
-.board-badge {
-  font-family: "galmuri9";
-  color: #ffe600;
-  animation: flicker-badge 1.5s linear infinite alternate;
-  animation-play-state: running;
-}
-
-.board-nickname {
-  font-family: "galmuri9";
-  /* color: #ffe600; */
+.current-station-info {
+  font-size: 70%;
   animation: flicker-nickname 1.5s linear infinite alternate;
   animation-play-state: running;
 }
+.current-station-info2 {
+  font-family: "galmuri9";
+  color: #fec189;
+  animation: flicker-station 1.5s linear infinite alternate;
+  animation-play-state: running;
+}
 
-@keyframes flicker-badge {
+@keyframes flicker-title {
   0%,
   18%,
   22%,
@@ -163,9 +139,8 @@
   53%,
   57%,
   100% {
-    text-shadow: 0 0 4px #ffe600, 0 0 11px #ffe600, 0 0 19px #ffe600,
-      0 0 40px #ffe600;
-    /* 0 0 80px #ff0000, 0 0 90px #ff0000, 0 0 100px #ff0000, 0 0 150px #ff0000; */
+    text-shadow: 0 0 4px #ff0000, 0 0 11px #ff0000, 0 0 19px #ff0000,
+      0 0 40px #ff0000;
   }
   20%,
   24%,
@@ -184,7 +159,24 @@
   100% {
     text-shadow: 0 0 4px #86f55f, 0 0 11px #86f55f, 0 0 19px #86f55f,
       0 0 40px #86f55f;
-    /* 0 0 80px #ffe600, 0 0 90px #ffe600, 0 0 100px #ffe600, 0 0 150px #ffe600; */
+  }
+  20%,
+  24%,
+  55% {
+    text-shadow: none;
+  }
+}
+
+@keyframes flicker-station {
+  0%,
+  18%,
+  22%,
+  25%,
+  53%,
+  57%,
+  100% {
+    text-shadow: 0 0 4px #fec189, 0 0 11px #fec189, 0 0 19px #fec189,
+      0 0 40px #fec189;
   }
   20%,
   24%,
