--- a/FE/front/src/pages/MainPage.css
+++ b/FE/front/src/pages/MainPage.css
@@ -25,25 +25,42 @@
   }
 }
 
-.character-nickname-title{
-  width:32%;
-  height:22%;
+.character-nickname-title {
+  width: 32%;
+  height: 22%;
   position: absolute;
-  left: 5%;
-  top: 63%;
-  z-index: 1002;
-  object-fit: cover;
+  left: 10%;
+  top: 59%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .character {
   width: 70%;
   height: 72%;
   z-index: 1002;
 }
-.character-nickname{
-  
+.character-nickname {
+  box-sizing: border-box;
+  width:max-content;
+  font-size: 120%;
+  font-weight: 900;
+  margin-bottom: 5%;
+  z-index: 1002;
+  font-family: "galmuri9";
 }
-.character-title{
-
+.character-title {
+  box-sizing: border-box;
+  width:max-content;
+  margin-top: 3%;
+  padding: 3% 10%;
+  font-size: 110%;
+  font-weight: 900;
+  border: solid black 2px;
+  border-radius: 30px;
+  z-index: 1002;
+  font-family: "galmuri9";
+  visibility: hidden;
 }
 .main-router-map-btn {
   box-sizing: border-box;
